[tool.poetry]
name = "torchelie"
version = "0.1.0"
description = ""
authors = ["Guillaume Sanchez <Guillaume.v.sanchez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
